# general-learning-and-projects-monorepo

./: .gitignore  README.md
HarssmentPreventionApp/: .gitignore
projects/: .gitignore  .pylintsrc  adds.ps1  proj.ps1  pyproject.toml  scan_dependencies_vers.py  uv_add_sync.py  venv.ps1
projects/basic_genai_apps/: README.md  pyproject.toml
projects/basic_genai_apps/chatbot/: app.py  chatbot.py
projects/basic_genai_apps/image_captioning/: automated_url_captioner.py  image_cap.py  image_captioning_app.py
projects/basic_genai_apps/meeting_assistant/: download_audio.py  speech2text_app.py  speech_analyzer.py
projects/basic_genai_apps/pdf_rag/: worker.py
projects/basic_genai_apps/voice_assistant/: server.py  worker.py
projects/sentiment_analysis/: README.md  pyproject.toml  sentiment_analysis.py  server.py
