[project]
name = "basic-genai-apps"
version = "0.1.0"
description = "Some basic genai apps based on ibm genai engineer certificate course"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4==0.0.2",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "gradio==5.23.2",
    "langchain==0.1.11",
    "openai>=1.98.0",
    "pillow>=11.3.0",
    "requests==2.31.0",
    "torch==2.2.1",
    "torchaudio>=2.2.1",
    "torchvision>=0.17.1",
    "transformers==4.38.2",
]

[tool.black]
# Project-specific overrides (if any)

[tool.isort]
# Project-specific overrides (if any)

[tool.ruff]

[dependency-groups]
code-quality = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pylint>=3.3.7",
    "ruff>=0.11.9",
]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
]
# Project-specific overrides (if any)

[project.optional-dependencies]
# Add project-specific dependencies here
